feat: implement forum API
