# server/src/models/DTOs/CreatePostDTO.ts
@@ -1,0 +1,9 @@
+import User from "../User";
+
+type CreatePostDTO = {
+    creator: User;
+    content: string;
+    contentImage?: string[];
+}
+
+export default CreatePostDTO;
